--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./Assets/style.css">
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -14,7 +16,7 @@
         </div>
     </header>
     <main>
-        <>
+        <div>
             <form>
                 <h2>Search for a City:</h2>
                 <!--Input will be the search bar for the city.-->
@@ -31,6 +33,7 @@
                 <button class="button4"></button>
                 <button class="button5"></button>
             </div>
+        </div>    
             <!--Will hold the weather for the day-->
             <div>
                 <h2>Place holder for the city and date: </h2>
@@ -97,5 +100,8 @@
 
         </div>
     </main>
+
+    <script src="./Assets/java.js"></script>
 </body>
+
 </html>
