--- a/index.html
+++ b/index.html
@@ -8,96 +8,97 @@
     <link rel="stylesheet" href="./Assets/style.css">
     <title>Weather Dashboard</title>
 </head>
-<body>
-    <header>
+
+<body class="">
+    <header class="title is-1">
         <!--Gradient color in a smaller textbox-->
-        <div>
-            <h1>Weather Dashboard</h1>
+        <div class="container hero-body has-text-centered">
+            <h1 class="title has-text-white">Weather Dashboard</h1>
         </div>
     </header>
-    <main>
-        <div>
-            <form>
-                <h2>Search for a City:</h2>
+    <main class="columns">
+        <div class="tile is-3 is-vertical topleft">
+            <form class="box">
                 <!--Input will be the search bar for the city.-->
-                <input name="search" id="">
-                <button>Search</button>
+                <input name="search" class="input m-2" placeholder="search for a city"id="">
+                <button class="button is-link is-fullwidth m-2 is-rounded">Search</button>
             </form>
 
             <!--Recent searched cities-->
-            <div>
-                <h1>Recent searches:</h1>
-                <button class="button1"></button>
-                <button class="button2"></button>
-                <button class="button3"></button>
-                <button class="button4"></button>
-                <button class="button5"></button>
+            <div class="tile is-flex-direction-column">
+                <h1 class="subtitle">Recent searches:</h1>
+                <button class="button1 button  m-3 is-static"></button>
+                <button class="button2 button  m-3 is-static"></button>
+                <button class="button3 button  m-3 is-static"></button>
+                <button class="button4 button  m-3 is-static"></button>
+                <button class="button5 button  m-3 is-static"></button>
             </div>
-        </div>    
-            <!--Will hold the weather for the day-->
-            <div>
-                <h2>Place holder for the city and date: </h2>
-                <h3>Temperature place holder</h3>
-                <h3>Wind placeholder</h3>
-                <h3>Humidity placeholder</h3>
-                <h3>UV index placeholder</h3>
+        </div>   
+
+        <div class="column m-2">   <!--Will hold the weather for the day-->
+            <div class="topright">
+                <h2 class="subtitle is-4 has-text-weight-bold">Place holder for the city and date: </h2>
+                <h3 class="p-2">Temperature place holder</h3>
+                <h3 class="p-2">Wind placeholder</h3>
+                <h3 class="p-2">Humidity placeholder</h3>
+                <h3 class="p-2">UV index placeholder</h3>
             </div>
             <!--main container to hold the 5 day forecast-->
-            <div>
-                <div>
-                    <h2>5-day forecast:</h2>
+            <div class="">
+                <div class="mt-6 bottomright">
+                    <h2 class=" subtitle has-text-weight-bold">5-day forecast:</h2>
                     <!--5 day forecast holders-->
-                    <div>
-                        <h2>Place holder for the city and date: </h2>
-                        <img>
-                        <h3>Temperature place holder</h3>
-                        <h3>Wind placeholder</h3>
-                        <h3>Humidity placeholder</h3>
-                    </div>
+                    <div class="columns has-text-white">
+                        <div class="m-2 fiveday">
+                            <h2>Place holder for the city and date: </h2>
+                            <img>
+                            <h3>Temperature place holder</h3>
+                            <h3>Wind placeholder</h3>
+                            <h3>Humidity placeholder</h3>
+                        </div>
 
-                    <div>
-                        <h2>Place holder for the city and date: </h2>
-                        <img>
-                        <h3>Temperature place holder</h3>
-                        <h3>Wind placeholder</h3>
-                        <h3>Humidity placeholder</h3>
-                    </div>
+                        <div class="m-2 fiveday">
+                            <h2>Place holder for the city and date: </h2>
+                            <img>
+                            <h3>Temperature place holder</h3>
+                            <h3>Wind placeholder</h3>
+                            <h3>Humidity placeholder</h3>
+                        </div>
 
-                    <div>
-                        <h2>Place holder for the city and date: </h2>
-                        <img>
-                        <h3>Temperature place holder</h3>
-                        <h3>Wind placeholder</h3>
-                        <h3>Humidity placeholder</h3>
-                    </div>
+                        <div class="m-2 fiveday">
+                            <h2>Place holder for the city and date: </h2>
+                            <img>
+                            <h3>Temperature place holder</h3>
+                            <h3>Wind placeholder</h3>
+                            <h3>Humidity placeholder</h3>
+                        </div>
 
-                    <div>
-                        <h2>Place holder for the city and date: </h2>
-                        <img>
-                        <h3>Temperature place holder</h3>
-                        <h3>Wind placeholder</h3>
-                        <h3>Humidity placeholder</h3>
-                    </div>
+                        <div class="m-2 fiveday">
+                            <h2>Place holder for the city and date: </h2>
+                            <img>
+                            <h3>Temperature place holder</h3>
+                            <h3>Wind placeholder</h3>
+                            <h3>Humidity placeholder</h3>
+                        </div>
 
-                    <div>
-                        <h2>Place holder for the city and date: </h2>
-                        <img>
-                        <h3>Temperature place holder</h3>
-                        <h3>Wind placeholder</h3>
-                        <h3>Humidity placeholder</h3>
-                    </div>
+                        <div class="m-2 fiveday">
+                            <h2>Place holder for the city and date: </h2>
+                            <img>
+                            <h3>Temperature place holder</h3>
+                            <h3>Wind placeholder</h3>
+                            <h3>Humidity placeholder</h3>
+                        </div>
 
-                    <div>
-                        <h2>Place holder for the city and date: </h2>
-                        <img>
-                        <h3>Temperature place holder</h3>
-                        <h3>Wind placeholder</h3>
-                        <h3>Humidity placeholder</h3>
+                        <div class="m-2 fiveday">
+                            <h2>Place holder for the city and date: </h2>
+                            <img>
+                            <h3>Temperature place holder</h3>
+                            <h3>Wind placeholder</h3>
+                            <h3>Humidity placeholder</h3>
+                        </div>
                     </div>
-
                 </div>
             </div>
-
         </div>
     </main>
 
