creating a loop for the repo

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
         <div class="column m-2">   <!--Will hold the weather for the day-->
             <div class="topright">
-                <h2 class="subtitle is-4 has-text-weight-bold">Place holder for the city and date: </h2>
-                <h3 class="p-2">Temperature place holder</h3>
+                <h2 id="repo-search" class="subtitle is-4 has-text-weight-bold">Place holder for the city and date: </h2>
+                <h3 id="temp-placeholder" class="p-2">Temperature placeholder</h3>
                 <h3 class="p-2">Wind placeholder</h3>
                 <h3 class="p-2">Humidity placeholder</h3>
                 <h3 class="p-2">UV index placeholder</h3>
