did not use a loop for data; current city and info is displayed

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <div class="topright">
                 <h2 id="repo-search" class="subtitle is-4 has-text-weight-bold">Place holder for the city and date: </h2>
                 <h3 id="temp-placeholder" class="p-2">Temperature placeholder</h3>
-                <h3 class="p-2">Wind placeholder</h3>
-                <h3 class="p-2">Humidity placeholder</h3>
-                <h3 class="p-2">UV index placeholder</h3>
+                <h3 id="wind-placeholder" class="p-2">Wind placeholder</h3>
+                <h3 id="humidity-placeholder" class="p-2">Humidity placeholder</h3>
+                <h3 id="uv-placeholder" class="p-2">UV index placeholder</h3>
             </div>
             <!--main container to hold the 5 day forecast-->
             <div class="">
