5 day forecast populates with the correct parameters

--- a/index.html
+++ b/index.html
@@ -52,49 +52,42 @@
                         <div class="m-2 fiveday">
                             <h2>Place holder for the city and date: </h2>
                             <img>
-                            <h3>Temperature place holder</h3>
-                            <h3>Wind placeholder</h3>
-                            <h3>Humidity placeholder</h3>
+                            <h3 id="temp-one">Temperature place holder</h3>
+                            <h3 id="wind-one">Wind placeholder</h3>
+                            <h3 id="humidity-one">Humidity placeholder</h3>
                         </div>
 
                         <div class="m-2 fiveday">
                             <h2>Place holder for the city and date: </h2>
                             <img>
-                            <h3>Temperature place holder</h3>
-                            <h3>Wind placeholder</h3>
-                            <h3>Humidity placeholder</h3>
+                            <h3 id="temp-two">Temperature place holder</h3>
+                            <h3 id="wind-two">Wind placeholder</h3>
+                            <h3 id="humidity-two">Humidity placeholder</h3>
                         </div>
 
                         <div class="m-2 fiveday">
                             <h2>Place holder for the city and date: </h2>
                             <img>
-                            <h3>Temperature place holder</h3>
-                            <h3>Wind placeholder</h3>
-                            <h3>Humidity placeholder</h3>
+                            <h3 id="temp-three">Temperature place holder</h3>
+                            <h3 id="wind-three">Wind placeholder</h3>
+                            <h3 id="humidity-three">Humidity placeholder</h3>
                         </div>
 
                         <div class="m-2 fiveday">
                             <h2>Place holder for the city and date: </h2>
                             <img>
-                            <h3>Temperature place holder</h3>
-                            <h3>Wind placeholder</h3>
-                            <h3>Humidity placeholder</h3>
+                            <h3 id="temp-four">Temperature place holder</h3>
+                            <h3 id="wind-four">Wind placeholder</h3>
+                            <h3 id="humidity-four">Humidity placeholder</h3>
                         </div>
 
                         <div class="m-2 fiveday">
                             <h2>Place holder for the city and date: </h2>
                             <img>
-                            <h3>Temperature place holder</h3>
-                            <h3>Wind placeholder</h3>
-                            <h3>Humidity placeholder</h3>
+                            <h3 id="temp-five">Temperature place holder</h3>
+                            <h3 id="wind-five">Wind placeholder</h3>
+                            <h3 id="humidity-five">Humidity placeholder</h3>
                         </div>
-
-                        <div class="m-2 fiveday">
-                            <h2>Place holder for the city and date: </h2>
-                            <img>
-                            <h3>Temperature place holder</h3>
-                            <h3>Wind placeholder</h3>
-                            <h3>Humidity placeholder</h3>
                         </div>
                     </div>
                 </div>
